# data-tools

./: Makefile  README.md  pyproject.toml
src/data_tools/: main.py
src/data_tools/utils/: avro.py  base.py  parquet.py
tests/: sample_schema.avsc  test_avro.py  test_main.py  test_parquet.py
