[project]
name = "data-tools"
version = "0.1.0"
description = ""
authors = [{name="Kirill Bobrov", email="miaplanedo@gmail.com"}]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastavro = "^1.7.3"
duckdb = "^0.7.1"
arrow = "^1.2.3"
cython = "^0.29.34"
pyarrow = "^12.0.0"
python-snappy = "^0.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^4.0.0"

[project.scripts]
data-tools = "data_tools.main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
